<resources>
    <!-- ============================================= -->
    <!-- ==== STRINGS PARA ACTIVITY_LOGIN ==== -->
    <!-- ============================================= -->
    <string name="app_name">TiendaRegalos</string>
    <string name="texto01">Bienvenido!!</string>
    <string name="texto02">Ingresar</string>
    <string name="texto03">¿Olvidaste tu contraseña?</string>
    <string name="texto04">¡No estoy registrado!</string>
    <string name="texto05">Registrar</string>
    <string name="texto06">Estoy Registrado!</string>
    <string name="texto07">Confirmar Datos</string>
    <string name="texto08">Corregir Datos</string>
    <string name="texto09">Cerrar Sesión</string>
    <string name="texto10">Recuperar Contraseña</string>
    <string name="hint01">Correo Electrónico</string>
    <string name="hint02">Contraseña</string>
    <string name="hint03">Nombre</string>
    <string name="hint04">Apellido Paterno</string>
    <string name="hint05">Apellido Materno</string>
    <string name="main_about_us_title">¿Quiénes Somos?</string>
    <string name="main_about_us_summary">Somos un gym de boxeo que forma campeones para la vida. Con disciplina, pasión y respeto, promovemos el crecimiento integral (físico, mental y espiritual) para que cada miembro se convierta en un líder dentro y fuera del ring, listo para enfrentar las batallas diarias.</string>

    <!-- ============================================= -->
    <!-- ==== STRINGS PARA ACTIVITY_MAIN ==== -->
    <!-- ============================================= -->
    <string name="main_welcome_greeting">No te quedes quieto</string>
    <string name="main_welcome_action">¡Boxea!</string>

    <string name="main_button_shop">Tienda</string>
    <string name="main_button_plans">Planes</string>
    <string name="main_button_tournaments">Torneos</string>

    <string name="main_schedules_title">Horarios:</string>
    <string name="main_schedules_details">Lunes - Viernes 6:00 AM - 10:00 PM\nSábado y Domingo 7:00 AM - 4:00 PM</string>
    <string name="main_invitation">¡Ven a entrenar con nosotros!</string>

    <string name="main_admin_panel_button">Panel Admin</string>

    <!-- ======================================= -->
    <!-- ====  STRINGS PARA TIENDA ==== -->
    <!-- ======================================= -->
    <string name="tienda_title">Tienda</string>
    <string name="tienda_search_hint">Buscar producto...</string>

    <!-- ======================================= -->
    <!-- ====    STRINGS PARA PLANES   ==== -->
    <!-- ======================================= -->
    <string name="planes_title">Planes Disponibles</string>
    <string name="planes_general_title">GENERAL</string>
    <string name="planes_general_price">$500 / MES</string>
    <string name="planes_general_features">• Personal Training\n• Body Building\n• Cardio\n• Clases Personalizadas</string>

    <string name="planes_student_title">ESTUDIANTES</string>
    <string name="planes_student_price">$400 / MES</string>
    <!-- Las características son las mismas, podemos reutilizar el string -->

    <string name="planes_8days_title">8 DÍAS AL MES</string>
    <string name="planes_8days_price">$310 / MES</string>
    <string name="planes_8days_features">• Acceso 8 días al mes\n• Body Building\n• Cardio</string>

    <!-- ========================================== -->
    <!-- ====    STRINGS PARA TORNEOS   ==== -->
    <!-- ========================================== -->
    <string name="torneos_title">Próximos Torneos</string>


</resources>
